<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="com.mahesaiqbal.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:capitalize="words"
            android:hint="@string/nama"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/check_krim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krim"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_coklat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coklat"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/jumlah_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/jumlah"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/tambah"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:onClick="tambah"
                android:text="@string/tambah" />

            <TextView
                android:id="@+id/jumlah_kopi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/tambah"
                android:layout_toRightOf="@id/tambah"
                android:text="@string/kosong"
                android:textSize="18sp" />

            <Button
                android:id="@+id/kurang"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toEndOf="@id/jumlah_kopi"
                android:layout_toRightOf="@id/jumlah_kopi"
                android:onClick="kurang"
                android:text="@string/kurang" />

        </RelativeLayout>

        <TextView
            android:id="@+id/harga_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/harga"
            android:textAllCaps="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/rp_0"
            android:textSize="18sp" />

        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="order"
            android:text="@string/order" />

    </LinearLayout>

</ScrollView>
